@@ -44,6 +44,7 @@ public:
              const wxPoint& pos = wxDefaultPosition,
              long style = wxDEFAULT_DIALOG_STYLE);
     void Init();
+    virtual ~wxWizard();
 
     // implement base class pure virtuals
     virtual bool RunWizard(wxWizardPage *firstPage);
